# python-template

./: .pre-commit-config.yaml  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yaml
docs/: index.md
tests/: test_core.py
